<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="228dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/woman"/>

    <LinearLayout
        android:layout_below="@id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="6dp"
            android:ems="10"
            android:hint="@string/product_to_sell"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:hint="@string/price_of_you_product"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choose_picture" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_picture" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next" />
    </LinearLayout>
</RelativeLayout>